removes extra class

--- a/public-display/index.html
+++ b/public-display/index.html
@@ -16,7 +16,7 @@
 				            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="/socket.io/socket.io.js"></script>
 	    <script src="sketch.js"></script>
-	    <script src="src/obj.js"></script>
+	    <script src="src/obs.js"></script>
 	    <script src="src/cat.js"></script>
 	</body>
 
